# LAS-NL-Explanations

./: pyproject.toml  reformat_circa.py  requirements.txt  running_LAS.md
sim_experiments/: LAS_circa.job  NLI_data_utils.py  QA_data_utils.py  circa_data_utils.py  compute_sim.py  main.py  read_from_bucket.py  run_tasks.py  train_circa.job
sim_experiments/data/circa/: dev.csv  test.csv  train.csv
sim_experiments/data/circa/NLI/: dev.csv  test.csv  train.csv
sim_experiments/data/circa/QA/: dev.csv  test.csv  train.csv
sim_experiments/models/: T5ForMC.py
