[tool.poetry]
name = "las-nl-explanations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
transformers = "^4.6.1"
torch = "^1.8.1"
pandas = "^1.2.4"
sacrebleu = "^1.5.1"
tensorflow = "^2.5.0"
cloud-tpu-client = "^0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
